# artemis-oedo

./: .gitignore  CMakeLists.txt  RDataFrameAnalysis.cpp  README.md  Sn130_PID.cut  artemislogon.C  artemislogon.C.in  artlogin.sh  getdata  mapper.conf  prep  ridf  ridf_prep  ridf_rftest  ridf_tina  run_artemis.cpp  setbldprm.sh  thisartemis-oedo.sh  thisartemis-oedo.sh.in  ttt.map
analysis/: CMakeLists.txt  DumpParquet.cpp  DumpParquet.hpp  DumpParquet_Pulser.cpp  DumpParquet_kojima.cpp  RDataFrameAnalysis.cpp  run_artemis.cpp  srppacRDataFrameAna.cpp
conf/seg/: modulelist.yaml  modulelist_tina.yaml  seglist.yaml  seglist_dali.yaml  seglist_tina.yaml
hist/: chkeff.yaml  trig.yaml
hist/dia/: chktimingoffset.yaml  dia_strunoff.yaml  f3dia.yaml  s2dia.yaml
hist/dlppac/: f3_dlppac.yaml  f4_dlppac.yaml  f5_dlppac.yaml  f6_dlppac.yaml  fe7_dlppac.yaml  fe8_dlppac.yaml
hist/mwdc/: chkeff.yaml  chkmwdc.sakura.yaml  chkmwdc.tmpl.yaml  chkmwdc_offline.yaml  chkposi.yaml  chktrack.yaml  dtdl_hist.yaml
hist/optics/: chkoptics.sakura01.yaml  chkoptics.yaml  chkoptics_old.yaml
hist/pid/: .chkmass_maxz_v_reflise_8step.yaml.swp  .chkpid.yaml.swp  chkmass_maxz_ca_ref7_7step.yaml  chkmass_maxz_ca_reflise_8step.yaml  chkmass_maxz_co_ref7_7step.yaml  chkmass_maxz_co_reflise_8step.yaml  chkmass_maxz_cr_ref7_7step.yaml  chkmass_maxz_cr_reflise_8step.yaml  chkmass_maxz_fe_ref7_7step.yaml  chkmass_maxz_fe_reflise_8step.yaml  chkmass_maxz_mn_ref7_7step.yaml  chkmass_maxz_mn_reflise_8step.yaml  chkmass_maxz_ni_reflise_8step.yaml  chkmass_maxz_sc_ref7_7step.yaml  chkmass_maxz_sc_reflise_8step.yaml  chkmass_maxz_ti_ref7_7step.yaml  chkmass_maxz_ti_reflise_8step.yaml  chkmass_maxz_v_ref7_7step.yaml  chkmass_maxz_v_reflise_8step.yaml  chkmass_st0_ca.yaml  chkmass_st0_ca_2step.yaml  chkmass_st0_co_2step.yaml  chkmass_st0_cr.yaml  chkmass_st0_cr_2step.yaml  chkmass_st0_fe.yaml  chkmass_st0_fe_2step.yaml  chkmass_st0_mn.yaml  chkmass_st0_mn_2step.yaml  chkmass_st0_ni_2step.yaml  chkmass_st0_sc.yaml  chkmass_st0_sc_2step.yaml  chkmass_st0_ti.yaml  chkmass_st0_ti_2step.yaml  chkmass_st0_v.yaml  chkmass_st0_v_2step.yaml  chkmass_st1_ca.yaml  chkmass_st1_ca_2step.yaml  chkmass_st1_ca_3step.yaml  chkmass_st1_co_2step.yaml  chkmass_st1_cr.yaml  (+69 more)
hist/pla/: chkpla.yaml  chkpla_calib.yaml  s2_pla.yaml
hist/s1/: gated.yaml  ic.yaml  ic_shift.yaml  ic_waveform.yaml  optics.yaml  s1.yaml  s1tuning.yaml
hist/si/: s2ssd.yaml
hist/srppac/: .chksrppac.yaml.swp  .chksrppaceffFE9.yaml.swo  .chksrppaceffFE9.yaml.swp  .dqdx_hist.yaml.swn  .qid_hist.yaml.swp  activeslit.yaml  chkcorrelation.yaml  chkposition.yaml  chksrppac.yaml  chksrppaceff.yaml  chksrppaceffFE12.yaml  chksrppaceffFE12_sh12s24.yaml  qcal.yaml  (+17 more)
hist/srppac-h445/: chkchargesome.yaml  chkposition.yaml  chksrppac.yaml  chksrppaceff.yaml  dqdx_hist.yaml  dqdx_qcal.yaml  dqdx_qqcal.yaml  dqdxcal.yaml  dqdxcalaxin.yaml  dqdxlr_hist.yaml  dqdxlr_qcal.yaml  hoof.yaml  q0cal.yaml  qcal.yaml  qcal_gate.yaml  qcal_gate12.yaml  qcalaxin.yaml
macro/: .setalias.C.swp  AlphaClibration.C  ChkCorr.C  ChkEff.C  ChkEffF3mwdc.C  ChkEffF5mwdc.C  ChkF5MWDC.C  DqDx.C  EremainvsEloss.C  GetFocus.cpp  IDSearch.C  algebratest.C  alias_ttt.C  alias_yy1.C  angdis.C  aq.C  aq2.C  aq3.C  aq4.C  aq5.C  aqcor.C  aqcor2.C  aqcor3.C  aqcor4.C  aqcor5.C  atimadraw.cpp  ch2v2.C  chks1.C  chks1pid.C  chks1pid2.C  chktof.C  compile.sh  corrDCC1.C  csi_calib.C  csi_dee.C  csidraw.C  csidrawlow.C  csidrawt.C  csipedastal.C  csipedastalt.C  (+60 more)
outputtext/: idlist.txt  sampleidall.txt
prm/: OA
src/: TDaliData.cc  TDaliData.h  TDaliProcessor.cc  TDaliProcessor.h  TModuleDecoderAMTTDC.cc  TModuleDecoderAMTTDC.h  TReplaceIDProcessor.cc  TReplaceIDProcessor.h  linkdef_user.h  makefile
src-get/: CMakeLists.txt  TGetEventStoreSh12.cc  TGetEventStoreSh12.h  linkdef_user.h
src-oedo/: CMakeLists.txt  EnergyLoss.h  TAPV8008Data.cc  TAPV8008Data.h  TBrhoReconstructProcessor.cc  TBrhoReconstructProcessor.h  TBrhoReconstructProcessor2.cc  TBrhoReconstructProcessor2.h  TBrhoReconstructProcessor3.cc  TBrhoReconstructProcessor3.h  TBrhoReconstructProcessorS1.cc  TBrhoReconstructProcessorS1.h  TCatGETChargeValidator.cc  TCatGETChargeValidator.h  TChargeValidateProcessor.h  TChargeValidateProcessor.h.old  TCmdPrint.cc  TCmdPrint.h  TCmdSave.cc  TDaliData.h  TDaliProcessor.h  TDiaData.cc  TDiaData.h  TDiaPadCalibrationProcessor.cc  TDiaPadCalibrationProcessor.h  TDiaPadData.cc  TDiaPadData.h  TDiaPadTimingSubtractionProcessor.cc  TDiaPadTimingSubtractionProcessor.h  TDiaStripCalibrationProcessor.cc  TDiaStripCalibrationProcessor.h  TDiaStripData.cc  TDiaStripData.h  TDiaStripTimingEachMergeProcessor.cc  TDiaStripTimingEachMergeProcessor.h  TDiaStripTimingEachMergeToffsetProcessor.cc  TDiaStripTimingEachMergeToffsetProcessor.h  TDiaStripTimingEachProcessor.cc  TDiaStripTimingEachProcessor.h  TDiaStripTimingProcessor.cc  (+108 more)
src-oedo/tdali/: TDaliData.cc  TDaliProcessor.cc
src-parquet/: CMakeLists.txt  TDataBuilderBase.cpp  TDataBuilderBase.hpp  TEventHeaderDataBuilder.cpp  TEventHeaderDataBuilder.hpp  TMWDCHitDataBuilder.cpp  TMWDCHitDataBuilder.hpp  TParquetFileWriter.cpp  TParquetFileWriter.hpp  TSRPPACPlaneDataBuilder.cpp  TSRPPACPlaneDataBuilder.hpp  TSimpleDataBuilder.cpp  TSimpleDataBuilder.hpp  TTimingChargeDataBuilder.cpp  TTimingChargeDataBuilder.hpp  TTrackingResultDataBuilder.cpp  TTrackingResultDataBuilder.hpp
steering/: .chkbld.yaml.swo  .chkbld.yaml.swp  .chkdlppac.yaml.swp  .chks1all_hist.yaml.swp  .chksrppac.yaml.swp  .oekaki.yaml.swp  BLD.yaml  BLD_tofoffset_test.yaml  BLD_tpla.yaml  all.yaml  chkall.yaml  chkamsc.yaml  chkbld.ds.yaml  chkbld.fe.yaml  chkbld.ttt.yaml  chkbld.yaml  chkbld2.yaml  chkbld_back.yaml  chkbld_dzn.yaml  chkbld_li.yaml  chkbld_maxevt.yaml  chkbld_ni.yaml  chkbld_r3.yaml  chkboth.tmpl.yaml  chkcoin.yaml  chkcorrelation.yaml  chkdali.yaml  chkdaq.yaml  chkdia.yaml  chkdiapla.yaml  chkdlppac.yaml  chkge.yaml  chkget.sh12.yaml  chkget.yaml  chkic.yaml  chkic_shift.yaml  chkmwdc_treff7.tmpl.yaml  chkni.yaml  chkopt_treff7_ppacinv.tmpl.yaml  chkoptics.tmpl.yaml  (+64 more)
(+2386 files in other folders)
